[package]
name = "texture_processor_gui"
version = "0.1.0"
authors = ["Lukas Orsvarn <lukas@orsvarn.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

orbtk = { git = "https://github.com/redox-os/orbtk.git", branch = "develop" }
# texture_processor = { git = "https://github.com/lukors/kanter_core.git", branch = "master" }
texture_processor = { path = "../kanter_core" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"