[package]
name = "kanter"
version = "0.1.0"
authors = ["Lukas Orsvärn <lukas@orsvarn.com>"]
edition = "2018"

[dependencies]

orbtk = { git = "https://github.com/lukors/orbtk.git", branch = "develop" }
kanter_core = { git = "https://github.com/lukors/kanter_core.git", branch = "master" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"